Bug 1328814 - Don't insist on folder validity when creating an nsIURI object. r=rkent,jorgk